[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/shared/shared.gd" type="Script" id=1]
[ext_resource path="res://scenes/shared/background/foregrounds/hills/middle_parallax.png" type="Texture" id=2]
[ext_resource path="res://scenes/shared/background/backgrounds/night/night.png" type="Texture" id=3]
[ext_resource path="res://scenes/shared/background/foregrounds/hills/back_parallax.png" type="Texture" id=4]
[ext_resource path="res://scenes/shared/background/foregrounds/hills/front_parallax.png" type="Texture" id=5]
[ext_resource path="res://scenes/shared/background_handler.gd" type="Script" id=6]

[node name="shared" type="Node2D"]
script = ExtResource( 1 )

[node name="parallax" type="ParallaxBackground" parent="."]
layer = -1
scroll_base_offset = Vector2( 0, 290 )

[node name="layer_1" type="ParallaxLayer" parent="parallax"]
modulate = Color( 0.711, 0.7173, 0.9, 1 )
motion_scale = Vector2( 0.075, 0.5 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="parallax/layer_1"]
texture = ExtResource( 4 )
centered = false

[node name="layer_2" type="ParallaxLayer" parent="parallax"]
modulate = Color( 0.709804, 0.717647, 0.901961, 1 )
z_index = 1
motion_scale = Vector2( 0.15, 0.5 )
motion_mirroring = Vector2( 1616, 0 )

[node name="Sprite" type="Sprite" parent="parallax/layer_2"]
texture = ExtResource( 2 )
centered = false

[node name="layer_3" type="ParallaxLayer" parent="parallax"]
modulate = Color( 0.711, 0.7173, 0.9, 1 )
z_index = 2
motion_scale = Vector2( 0.3, 0.5 )
motion_mirroring = Vector2( 1536, 0 )

[node name="Sprite" type="Sprite" parent="parallax/layer_3"]
texture = ExtResource( 5 )
centered = false

[node name="background" type="CanvasLayer" parent="."]
layer = -128

[node name="Sprite" type="Sprite" parent="background"]
position = Vector2( -0.3078, -0.307785 )
z_index = -512
z_as_relative = false
texture = ExtResource( 3 )
centered = false

[node name="background_handler" type="Node" parent="."]
script = ExtResource( 6 )
background = NodePath("../background")
layer_1 = NodePath("../parallax/layer_1")
layer_2 = NodePath("../parallax/layer_2")
layer_3 = NodePath("../parallax/layer_3")
